Modify cassandra-env to properly use jvm.options and load agents